--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1"
-  }
+  },
+  "proxy" : "http://localhost:8080"
 }
